--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "proxy": "http://localhost:5000/",
   "dependencies": {
+    "@chakra-ui/react": "^2.5.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.2.1",
+    "framer-motion": "^9.0.2",
     "grommet": "^2.29.1",
     "grommet-icons": "^4.9.0",
     "http-proxy-middleware": "^2.0.6",
